refactor: pm_br_organic_farming
refactored pm_organic_farming to pm_br_organic_farming

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -287,7 +287,7 @@
 
  pm_financial_district_merchant_owned: "Merchant Owned"
  pm_financial_district_capitalist_owned: "Capitalist Owned"
- pm_organic_farming: "Organic Farming"
+ pm_br_organic_farming: "Organic Farming"
 
  decree_romanisation: "Romanization"
  decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
