add new techs and production methods
 br_tech_standardized_farming: "Standardized Farming"
 br_tech_standardized_farming_desc: "By introducing consistent crop rotations, shared techniques, and centralized oversight, farming becomes more predictable and efficient. These practices help reduce waste and increase yields across rural regions."
 br_tech_organic_farming: "Organic Farming"
 br_tech_organic_farming_desc: "Emphasizing natural fertilizers like manure and compost, organic farming avoids artificial chemicals to improve soil health and long-term sustainability. Though slower to adopt, it appeals to reformers and health-conscious producers."
br_tech_leaded_glass: "Leaded Glassmaking"
 br_tech_leaded_glass_desc: "The addition of lead oxide to glassmaking processes allows for the creation of clearer, more durable, and more easily shaped glass. This advancement opens new possibilities in optics, architecture, and luxury goods."
 br_tech_dye_workshops: "Dye Workshops"
 br_tech_dye_workshops_desc: "By organizing dye production into dedicated workshops, the process becomes more consistent and scalable. Standardized methods improve color quality and enable expanded use in textiles and decorative arts."
 pm_br_traditional_clothes: "Traditional Clothing"
 pm_br_traditional_furniture: "Traditional Furniture"
 pm_br_traditional_glass: "Traditional Glassmaking"
 pm_br_traditional_paper: "Traditional Papermaking"
 pm_cementation_process: "Cementation Process"
 pm_br_traditional_shipbuilding: "Traditional Shipbuilding"

--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -103,5 +103,12 @@
  pmg_train_automation_building_spices_plantation: "Train Automation"
  pmg_ownership_land_building_spices_plantation: "Ownership"
 
- # Food industry
+ # industry
  pm_spiced_food: "Spiced food"
+ pm_br_traditional_clothes: "Traditional Clothing"
+ pm_br_traditional_furniture: "Traditional Furniture"
+ pm_br_traditional_glass: "Traditional Glassmaking"
+ pm_br_traditional_paper: "Traditional Papermaking"
+ pm_cementation_process: "Cementation Process"
+ pm_br_traditional_shipbuilding: "Traditional Shipbuilding"
+
