--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -14,6 +14,11 @@
  br_tech_selective_breeding_desc: "Selective breeding, also known as artificial selection, is a process by which humans breed plants and animals for particular traits."
  br_tech_horse_drawn_machinery: "Horse Drawn Machinery"
  br_tech_horse_drawn_machinery_desc: "Horse Drawn Machinery"
+ br_tech_standardized_farming: "Standardized Farming"
+ br_tech_standardized_farming_desc: "By introducing consistent crop rotations, shared techniques, and centralized oversight, farming becomes more predictable and efficient. These practices help reduce waste and increase yields across rural regions."
+ br_tech_organic_farming: "Organic Farming"
+ br_tech_organic_farming_desc: "Emphasizing natural fertilizers like manure and compost, organic farming avoids artificial chemicals to improve soil health and long-term sustainability. Though slower to adopt, it appeals to reformers and health-conscious producers."
+
 
  #Industry
  br_tech_artisan_manufacturing: "Artisan Manufacturing"
@@ -38,7 +43,10 @@
  br_tech_track_desc: "The wagonway is considered the prototype and predecessor of railways, and almost all mines built in the 16th and 17th centuries used wagonway mining cars as the only mode of transportation."
  br_tech_blast_furnaces: "Blast Furnaces"
  br_tech_blast_furnaces_desc: "Blast furnaces are large industrial structures used to smelt iron from its ore by applying intense heat and a continuous blast of air. Charged with iron ore, coke, and limestone, these towering furnaces operate at extremely high temperatures to produce molten pig iron, which can then be refined into steel. Central to early modern and industrial-age metallurgy, blast furnaces revolutionized metal production by enabling mass output on an unprecedented scale."
-
+ br_tech_leaded_glass: "Leaded Glassmaking"
+ br_tech_leaded_glass_desc: "The addition of lead oxide to glassmaking processes allows for the creation of clearer, more durable, and more easily shaped glass. This advancement opens new possibilities in optics, architecture, and luxury goods."
+ br_tech_dye_workshops: "Dye Workshops"
+ br_tech_dye_workshops_desc: "By organizing dye production into dedicated workshops, the process becomes more consistent and scalable. Standardized methods improve color quality and enable expanded use in textiles and decorative arts."
 
  # Society
  br_tech_mercantilism: "Mercantilism"
