--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -98,6 +98,10 @@
  pm_public_hackney_carriage: "Public Hackney Carriage"
  pm_public_hackney_carriage_haap: "$pm_public_hackney_carriage$"
 
+ #Agriculture
+ pm_br_traditional_farming: "Traditional Farming"
+ pm_br_traditional_farming_building_rice_farm: "Traditional Rice Farming"
+
  # Spice plantations
  pmg_base_building_spices_plantation: "Base"
  pmg_train_automation_building_spices_plantation: "Train Automation"
