--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -140,8 +140,8 @@
  br_dutch_west_indies_ADJ: "Dutch West Indies"
  br_formosa_natives: "Formosa"
  br_formosa_natives_ADJ: "Formosan"
- br_japanese_siberia: "Shiberia"
- br_japanese_siberia_ADJ: "Shiberia hito"
+ br_japanese_siberia: "Seihokudō"
+ br_japanese_siberia_ADJ: "Seihokudō"
  br_japanese_pacific_islands: "Nanyou Guntou"
  br_japanese_pacific_islands_ADJ: "Nanyou Guntou"
  br_new_world_company: "Nordhafsveðr"
@@ -206,8 +206,8 @@
  dyn_c_HRE_adj: "Holy Roman"
 
  #Monarchy
- dyn_c_br_basileia_romaion: "Basileía Rōmaíōn"
- dyn_c_br_basileia_romaion_adj: "Rōmaíōn"
+ dyn_c_br_basileia_romaion: "Basileía Romaíon"
+ dyn_c_br_basileia_romaion_adj: "Romaíon"
 
  #Optional names
  dyn_c_re: "Roman Empire"
