new unique techs added
- Chinese Luxuries
- Steppe Horse Traditions
- Indian Luxuries

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -47,6 +47,11 @@
  br_tech_leaded_glass_desc: "The addition of lead oxide to glassmaking processes allows for the creation of clearer, more durable, and more easily shaped glass. This advancement opens new possibilities in optics, architecture, and luxury goods."
  br_tech_dye_workshops: "Dye Workshops"
  br_tech_dye_workshops_desc: "By organizing dye production into dedicated workshops, the process becomes more consistent and scalable. Standardized methods improve color quality and enable expanded use in textiles and decorative arts."
+ br_tech_furniture_manufacturies: "Furniture Manufactories"
+ br_tech_furniture_manufacturies_desc: "By concentrating carpentry and upholstery into centralized manufactories, furniture production becomes faster and more uniform. These early factories enable economies of scale and serve growing urban markets."
+ br_tech_paper_manufacturies: "Paper Manufactories"
+ br_tech_paper_manufacturies_desc: "Advancements in mechanical pulping and organized paper workshops allow for higher output and lower costs. This innovation supports the spread of literacy, recordkeeping, and printed media."
+
 
  # Society
  br_tech_mercantilism: "Mercantilism"
@@ -115,6 +120,18 @@
  tech_cavalry_specialization_desc: "During the 18-19th century, cavalry soldiers underwent significant changes due to advancements in technology and warfare tactics. The widespread use of firearms and artillery posed new challenges for cavalry units. As a result, their role shifted from traditional charges to more flexible and diversified roles."
 
  #Special tech
+ br_tech_chinese_luxuries: "Chinese Luxuries"
+ br_tech_chinese_luxuries_desc: "China's long-standing mastery in the production of porcelain, silk, tea, and refined goods grants a natural advantage in luxury manufacturing. However, this focus can come at the expense of more common household items."
+ br_tech_indonesia_spices: "Indonesian Spices and Dyes"
+ br_tech_indonesia_spices_desc: "The fertile archipelagos of Indonesia yield rare spices and vibrant dyes in abundance. Control over these prized goods ensures high-value exports and vibrant artisan industries."
+ br_tech_steppe_horses: "Steppe Horse Traditions"
+ br_tech_steppe_horses_desc: "The open steppes have long bred strong horses and fierce riders. This heritage strengthens local horse production and enhances the mobility and power of native cavalry forces."
+ br_tech_japanese_luxuries: "Japanese Luxuries"
+ br_tech_japanese_luxuries_desc: "Japan's refined traditions in silk weaving, tea cultivation, and ceramic artistry contribute to a steady flow of elegant luxury goods prized both at home and abroad."
+ br_tech_indian_luxuries: "Indian Luxuries"
+ br_tech_indian_luxuries_desc: "India’s rich soils and deep artisan traditions provide a natural advantage in producing aromatic teas, vivid dyes, and exotic spices, fueling both domestic industries and global trade."
+
+
  br_tech_greekfire: "Greekfire" #aka Liquid Fire
  br_tech_greekfire_desc: "Greek fire, a closely-guarded secret of Basileia Romaion, is a devastating incendiary weapon. At sea, Romaion ships launch projectiles of Greek fire onto enemy vessels, igniting even water. Specialized tubes allowed sailors to spray it directly at foes. On land,  handheld flame-throwing devices project it onto enemies."
  br_tech_defensive_military_bonus: "Defensive Ethos"
