various tech and production method changes
- added and adjusted various techs and production methods.
- Replaced many tech modifiers with production methods.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -282,17 +282,12 @@
  state_trait_major_river_systems: "Important River"
  state_trait_ethiopian_highlands: "Ethiopian Highlands"
 
- automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
- default_building_spices_plantation: "Basic Production"
-
- pm_financial_district_merchant_owned: "Merchant Owned"
- pm_financial_district_capitalist_owned: "Capitalist Owned"
- pm_br_organic_farming: "Organic Farming"
-
  decree_romanisation: "Romanization"
  decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
 
  #Goods
+ goods_output_tea_mult: "Building @tea!$tea$ output"
+ goods_output_dye_mult: "Building @dye!$dye$ output"
 
  spices: "Spices"
  building_output_spices_add: "@spices! Spices output per level"
