--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -160,6 +160,7 @@
  br_maratha_modifier: "Maratha Confederation"
  br_modifier_fine_china_modifier: "Fine Porcelain"
  br_modifier_mughal_army: "Mansabdari"
+ br_modifier_ming_buff: "Righteous Cause"
  
  #JAP
  br_modifier_edo_class_system: "Edo Social Class System"
