--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -101,11 +101,31 @@
  #Agriculture
  pm_br_traditional_farming: "Traditional Farming"
  pm_br_traditional_farming_building_rice_farm: "Traditional Rice Farming"
+ pm_br_organic_farming: "Organic Farming"
 
- # Spice plantations
+ # Plantations
  pmg_base_building_spices_plantation: "Base"
  pmg_train_automation_building_spices_plantation: "Train Automation"
  pmg_ownership_land_building_spices_plantation: "Ownership"
+
+ automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
+ default_building_spices_plantation: "Basic Production"
+
+ #Ownership
+ pm_financial_district_merchant_owned: "Merchant Owned"
+ pm_company_headquarter_merchant_owned : "Merchant Owned"
+ pm_financial_district_capitalist_owned: "Capitalist Owned"
+
+ pm_br_traditional_building_coffee_plantation: "Traditional Coffee Plantation"
+ pm_br_traditional_building_cotton_plantation: "Traditional Cotton Plantation"
+ pm_br_traditional_building_dye_plantation: "Traditional Dye Plantation"
+ pm_br_traditional_building_opium_plantation: "Traditional Opium Plantation"
+ pm_br_traditional_building_tea_plantation: "Traditional Tea Plantation"
+ pm_br_traditional_building_tobacco_plantation: "Traditional Tobacco Plantation"
+ pm_br_traditional_building_sugar_plantation: "Traditional Sugar Plantation"
+ pm_br_traditional_building_banana_plantation: "Traditional Banana Plantation"
+ pm_br_traditional_building_silk_plantation: "Traditional Silk Plantation"
+ pm_br_traditional_building_vineyard_plantation: "Traditional Vineyard Plantation"
 
  # industry
  pm_spiced_food: "Spiced food"
