added new tech icons
- added new tech icons
- balanced some countries starting techs.

--- a/localization/english/replace/production_methods_l_english.yml
+++ b/localization/english/replace/production_methods_l_english.yml
@@ -6,3 +6,8 @@
  pm_picks_and_shovels_building_lead_mine: "Improved Lead Mining Tools"
  pm_picks_and_shovels_building_sulfur_mine: "Improved Sulfur Mining Tools"
  pm_picks_and_shovels_building_gold_mine: "Improved Gold Mining Tools"
+ 
+ #pm_simple_farming: "Simple Farming"
+ #pm_simple_farming_building_rice_farm: "Simple Farming"
+
+ #pm_basic_shipbuilding: "Improved Wood Ships"
