added more company icons

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -239,6 +239,7 @@
  company_br_vinland_timber_company: "Viðrfélag Vinlands"
  company_br_vinland_fishing_company: "Haffangfélagið"
  company_br_early_swedish_resource_company: "Stora Kopparberg" #Stora Kopparberg Bergslags Aktiebolag
+ company_br_bavarian_beer: "Bayerische Brauerei"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
