new prestige goods
Added:
prestige_good_br_prestige_spices: "Indies Spices"
prestige_good_br_prestige_pearls: "Fine Pearls"
Also new company for Non Bavarian Germans and German bordering cultures.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -240,6 +240,7 @@
  company_br_vinland_fishing_company: "Haffangfélagið"
  company_br_early_swedish_resource_company: "Stora Kopparberg" #Stora Kopparberg Bergslags Aktiebolag
  company_br_bavarian_beer: "Bayerische Brauerei"
+ company_br_german_beer: "Deutscher Brauverband"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
@@ -249,7 +250,9 @@
  prestige_good_br_new_world_pine: "New World Pine"
  prestige_good_br_new_world_fur: "New World Fur"
  prestige_good_br_prestige_copper: "Kopparklimp"
- prestige_good_br_prestige_beer: "Königsbier" 
+ prestige_good_br_prestige_beer: "Königsbier"
+ prestige_good_br_prestige_spices: "Indies Spices"
+ prestige_good_br_prestige_pearls: "Fine Pearls"
 
  #State Regions
 
