--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -190,3 +190,9 @@
  
  cahokia_elysium_protection_decision: "Submit to Elysium as a Protectorate"
  cahokia_elysium_protection_decision_desc: "In the shadow of rising powers and foreign ambitions, the leaders of Cahokia weigh the future of their people. To stand alone may invite conquest or isolation — but to align with the Elysians offers another path. By accepting protectorate status under Elysium, we gain access to their technological knowledge, secure our borders through their military guarantees, and ensure favorable treatment in diplomacy and trade. While sovereignty will be tempered, our traditions may yet survive and flourish within their orbit. Let this be a pact of survival — and of opportunity."
+
+ br_decision_annex_siberian_tribes: "Annex the Siberian Tribes"
+ br_decision_annex_siberian_tribes_desc: "The Siberian tribes have long resisted our attempts to bring them under our rule. However, with the recent expansion of our empire, we now have the resources and military might to finally subjugate them. By integrating these tribes into our empire, we can secure our eastern borders and expand our influence in the region."
+
+ br_decision_annex_aegypt_tribes: "Annex the Aegyptian Tribes"
+ br_decision_annex_aegypt_tribes_desc: "The desert tribes of Aegypt have long resisted our attempts to bring them under our rule. However, with the recent expansion of our empire, we now have the resources and military might to finally subjugate them. By integrating these tribes into our empire, we can secure our southern borders and expand our influence beyond the nile."
