--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -235,8 +235,8 @@
  company_br_kykladian_naval: "Naftikḗ Archē tōn Kykladiōn"
  company_br_elysian_colonization_company: "Oikistikḗ Hetaireía Elysiōn"
  company_br_elysian_ironworking_company: "Siderourgikḗ Koinōnía Elysiōn"
- company_br_vinland_colonization_company: "Landnámsfélagið Mikla"
- company_br_vinland_timber_company: "Viðrfélag Vinlands"
+ company_br_vinland_colonization_company: "Nordhafsveðr"
+ company_br_vinland_timber_company: "Viðrfélag"
  company_br_vinland_fishing_company: "Haffangfélagið"
  company_br_early_swedish_resource_company: "Stora Kopparberg" #Stora Kopparberg Bergslags Aktiebolag
  company_br_bavarian_beer: "Bayerische Brauerei"
