--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -43,6 +43,8 @@
  br_pm_bureaucrat_building_palace_complex: "Bureaucratic Administration"
  br_pm_default_building_palace_complex: "Aristocratic Administration"
 
+ pm_br_small_port: "Wayport"
+
  #Mining
  pm_br_early_picks_and_shovels_building_coal_mine: "Early Coal Mining"
  pm_br_early_picks_and_shovels_building_iron_mine: "Early Iron Mining"
