--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -253,6 +253,7 @@
  prestige_good_br_prestige_beer: "Königsbier"
  prestige_good_br_prestige_spices: "Indies Spices"
  prestige_good_br_prestige_pearls: "Fine Pearls"
+ prestige_good_br_prestige_manowars: "Bucintoro"
 
  #State Regions
 
