added three new society techs
added three new society techs to help fill in the area between tier 2 and 3 thats a little light.
 br_tech_mercantile_companies: "Mercantile Companies"
 br_tech_mercantile_companies_desc: "The establishment of chartered companies that are granted exclusive rights to trade and colonize specific regions. These companies often played a significant role in European expansion and imperialism."
 br_tech_administrative_formalization: "Administrative Formalization"
 br_tech_administrative_formalization_desc: "The process of creating formal structures and procedures for managing government functions and public administration. This includes the establishment of standardized bureaucracies, legal systems, and administrative practices."
 br_tech_constitutional_guarantees: "Constitutional Guarantees"
 br_tech_constitutional_guarantees_desc: "Democratic reforms give rise to legal frameworks that explicitly protect the rights of all citizens. By embedding equality and freedoms into constitutional law, states begin to move beyond representation toward true legal parity."

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -88,6 +88,13 @@
  br_tech_natural_history_desc: "The study of plants, animals, and minerals, with a focus on classification, description, and observation."
  br_tech_hostile_climate_colonization: "Early Hostile Climate Colonization"
  br_tech_hostile_climate_colonization_desc: "Allows earlier colonization of provinces with a hostile climate."
+ br_tech_mercantile_companies: "Mercantile Companies"
+ br_tech_mercantile_companies_desc: "The establishment of chartered companies that are granted exclusive rights to trade and colonize specific regions. These companies often played a significant role in European expansion and imperialism."
+ br_tech_administrative_formalization: "Administrative Formalization"
+ br_tech_administrative_formalization_desc: "The process of creating formal structures and procedures for managing government functions and public administration. This includes the establishment of standardized bureaucracies, legal systems, and administrative practices."
+ br_tech_constitutional_guarantees: "Constitutional Guarantees"
+ br_tech_constitutional_guarantees_desc: "Democratic reforms give rise to legal frameworks that explicitly protect the rights of all citizens. By embedding equality and freedoms into constitutional law, states begin to move beyond representation toward true legal parity."
+
 
  # Military
  br_tech_supply_train: "Supply Train"
