eastern armenia given armenian names

--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1014,10 +1014,10 @@
  HUB_NAME_STATE_AZERBAIJAN_mine: "Baku" 
  HUB_NAME_STATE_AZERBAIJAN_farm: "Shemakha" 
  HUB_NAME_STATE_AZERBAIJAN_wood: "Quba" 
- HUB_NAME_STATE_ELIZAVETPOL_city: "Elizavetpol" 
- HUB_NAME_STATE_ELIZAVETPOL_mine: "Gazakh" 
- HUB_NAME_STATE_ELIZAVETPOL_farm: "Nukha" 
- HUB_NAME_STATE_ELIZAVETPOL_wood: "Shusha" 
+ HUB_NAME_STATE_ELIZAVETPOL_city: "Gandzak" 
+ HUB_NAME_STATE_ELIZAVETPOL_mine: "Kazakh" 
+ HUB_NAME_STATE_ELIZAVETPOL_farm: "Shaki" 
+ HUB_NAME_STATE_ELIZAVETPOL_wood: "Shushi" 
  HUB_NAME_STATE_GREATER_CAUCASUS_city: "Tiflis" 
  HUB_NAME_STATE_GREATER_CAUCASUS_mine: "Bolnisi" 
  HUB_NAME_STATE_GREATER_CAUCASUS_farm: "Sukhum" 
