added a monarchy actions button
-added a monarchy actions button and a button to move the Imperial residence

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -96,6 +96,10 @@
  je_3de_estate_button_desc: "We must choose what actions we wish to take towards the $br_3de_estate_loc$."
  br_show_3de_estate_actions_loc: "$br_show_estate_actions_loc$ $br_3de_estate_loc$."
  br_hide_3de_estate_actions_loc: "$br_hide_estate_actions_loc$ $br_3de_estate_loc$."
+ je_revolution_monarchy_actions_button: "Monarchy actions"
+ je_revolution_monarchy_actions_button_desc: "We must choose what actions we wish to take in regards of the Monarchy."
+ br_show_revolution_monarchy_actions_loc: "$br_show_estate_actions_loc$ Monarchy."
+ br_hide_revolution_monarchy_actions_loc: "$br_hide_estate_actions_loc$ Monarchy."
  #1ste estate buttons
  je_create_new_titles_to_appease_nobles_button: "Create new titles to appease Nobles"
  je_create_new_titles_to_appease_nobles_button_desc: "Create new titles so the Nobility is appeased."
@@ -115,6 +119,9 @@
  je_subsidize_food_distribution_button_desc: "Start subsidizing food distributions to lessen the current food shortages."
  je_desubsidize_food_distribution_button: "Desubsidize food distribution"
  je_desubsidize_food_distribution_button_desc: "Stop subsidizing food distributions."
+ #Monarchy buttons
+ je_move_imperial_residence_button: "Move the [br_concept_imperial_residence]"
+ je_move_imperial_residence_button_desc: "Move the [br_concept_imperial_residence] to [GetBuildingType('br_building_versailles').GetName]"
 
 
  ##Events
