--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -778,7 +778,7 @@
  HUB_NAME_STATE_CHERNIHIV_wood: "Nizhyn"
  HUB_NAME_STATE_TAURIDA_city: "Alishker"
  HUB_NAME_STATE_TAURIDA_mine: "Lughan"
- HUB_NAME_STATE_TAURIDA_port: "Ozu Kale"
+ HUB_NAME_STATE_TAURIDA_port: "Maurocastro"
  HUB_NAME_STATE_TAURIDA_farm: "Kavyk"
  HUB_NAME_STATE_TAURIDA_wood: "Bahmut"
 
