--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -127,14 +127,14 @@
  ##Events
  #A Revolution looms
  hre_revolution_events.1.t: "A Revolution looms"
- hre_revolution_events.1.d: "There may be a revolution brewing."
+ hre_revolution_events.1.d: "There is unrest within our Empire it has come to our attention that there may be a revolution brewing. If we don't do anything one of our estates may launch a revolution."
  hre_revolution_events.1.f: "Though our nation has always stood as the beacon of civilization and stability in the Christian parts of West Europe, issues continue to arise. Over time cracks have started to show as our military, economy, and our God given social structure continue to become more and more outdated. Furthermore, our autonomous vassals and colonies have been calling more and more for increased freedoms and even independence! But before we can truly focus outward, we must focus inward. Due to our internal issues, increasing unrest among the so-called Third Estate has put us under increased threat of revolution, and if one happens, we would be unable to truly stop it. In this, we have two possible solutions… We can either embrace some of these would be Revolutionaries ideas and reform our great nation and bring it into this increasingly liberalizing world, by granting freedoms, abolishing serfdom, and replacing our outmoded economic and military structures! Or… We can embrace our own reforms, and suppress these Godless liberals by modernizing our military, centralizing our government around God’s chosen Emperor of the Romans, and bringing our economy to a state of modernized Feudalism! In either of these solutions, we will have some push back among the First and Second Estates, but if we fail, and the patience of the people wanes, our monarchy and our way of life will be drastically and irrevocably altered… Regardless, one of our first possible steps will be to deal with our schism on our national identity in this world where national identity is growing in importance."
  hre_revolution_events.1.a: "We must address it."
  #The Revolution Erupts
- hre_revolution_events.2.t: "The Revolution Erupts"
- hre_revolution_events.2.d: "A wave of unrest sweeps through our lands. The people, emboldened by their desire for change, rise up. The flames of revolution have been lit, and the future of the Empire now hangs in the balance."
- hre_revolution_events.2.f: "The revolution has ignited. The cries of the people echo through the streets, calling for a new order."
- hre_revolution_events.2.a: "We stand at the crossroads. We must act decisively."
+ #hre_revolution_events.2.t: "The Revolution Erupts"
+ #hre_revolution_events.2.d: "A wave of unrest sweeps through our lands. The people, emboldened by their desire for change, rise up. The flames of revolution have been lit, and the future of the Empire now hangs in the balance."
+ #hre_revolution_events.2.f: "The revolution has ignited. The cries of the people echo through the streets, calling for a new order."
+ #hre_revolution_events.2.a: "We stand at the crossroads. We must act decisively."
  #The Revolution Prevented
  hre_revolution_events.3.t: "The Revolution Prevented"
  hre_revolution_events.3.d: "Through swift and deliberate reforms, we have managed to quell the revolution before it could spread further. The demands of the people have been heard, and the crisis has been averted—at least for now."
