added a new construct statue of monarch action
-added a new construct statue of monarch action, this will trigger an event which is mainly a copy of the vanilla character_event.5

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -47,6 +47,9 @@
  br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_change_loc$ unspecified amount: $br_disatisfaction_change_value$."
  br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_change_loc$ unspecified amount: $br_disatisfaction_change_value$."
 
+ ##Monarchy popularity
+ br_will_increase_monthly_monarchy_popularity_tt: "This will increase the monthly monarchy popularity."
+
  ##Script value breakdowns
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
@@ -122,6 +125,8 @@
  #Monarchy buttons
  je_move_imperial_residence_button: "Move the [br_concept_imperial_residence]"
  je_move_imperial_residence_button_desc: "Move the [br_concept_imperial_residence] to [GetBuildingType('br_building_versailles').GetName]"
+ je_contruct_statue_of_monarch_button: "Contruct statue of monarch"
+ je_contruct_statue_of_monarch_button_desc: "Let us construct a statue of the monarch to increase the popularity of the monarchy."
 
 
  ##Events
@@ -165,6 +170,11 @@
  hre_revolution_events.8.d: "Militias have raided army arms depots in the capital, it seems the 3de estate has begun arming it self."
  hre_revolution_events.8.f: "A messanger enters the Emperors room, the news he brings is most disturbing 'The peasants have begun arming themselfs.'. Apperantly early in the morning a large mob of people march on one of the arms depots in the city and seems to have seized it by force and looted all of the weapons there. Information is limited, we don’t even know what has become of the soldiers guarding the depots, are they dead or, did they desert?"
  hre_revolution_events.8.a: "Can this get any worse."
+ #Build a statue of the monarch
+ hre_revolution_events.9.t: "Monument to the [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle]"
+ hre_revolution_events.9.d: "A statue of [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle] [SCOPE.sCharacter('br_statue_monarch').GetFullName] was commissioned and it has been suggested that it be displayed proudly in [SCOPE.sState('br_statue_state').GetName]. "
+ hre_revolution_events.9.f: "'[SCOPE.sCharacter('br_statue_monarch').GetCustom('personality_traits_loc')] is how you would describe the look on the face of the statue when it smiles down on you. Eyes that flicker in the opposite direction of the sun.\n\nThough maybe you are just imagining it?'"
+ hre_revolution_events.9.a: "A monument worthy of the [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle]."
  #Revolution erupts events
  hre_revolution_events.201.t: "March on the Royal Residence"
  hre_revolution_events.201.d: "A large number of members of the 3de estate have decided to march on the [br_concept_imperial_residence]."
