added unique tech for English fabric

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -137,6 +137,8 @@
  br_tech_japanese_luxuries_desc: "Japan's refined traditions in silk weaving, tea cultivation, and ceramic artistry contribute to a steady flow of elegant luxury goods prized both at home and abroad."
  br_tech_indian_luxuries: "Indian Luxuries"
  br_tech_indian_luxuries_desc: "India’s rich soils and deep artisan traditions provide a natural advantage in producing aromatic teas, vivid dyes, and exotic spices, fueling both domestic industries and global trade."
+ br_tech_english_fabric: "English Woolen Boom"
+ br_tech_english_fabric_desc: "The vast sheep pastures of England give rise to a flourishing woolen industry. As textile workshops expand, fabric output surges—though at the cost of traditional meat production. The green hills now hum with the labor of the loom rather than the lowing of cattle."
 
 
  br_tech_greekfire: "Greekfire" #aka Liquid Fire
